# codem

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  findings.md  index.html  package-lock.json  package.json  progress.md  requirements.md  roadmap.md  task_plan.md  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
.trellis/: workflow.md
.trellis/tasks/: agent-channel-defaults-and-ux.md  agent-channel-management.md  agent-channel-session-reuse.md  agent-channel-test-selection.md  agent-diagnostics-independent-loading.md  agent-error-details.md  agent-first-message-latency.md  agent-hot-runtimes.md  agent-lifecycle-version-and-mirror-fallback.md  agent-live-run-status.md  agent-model-catalog-loading-optimization.md  agent-multimodal-inputs.md  agent-network-proxy.md  agent-provider-brand-icons.md  agent-provider-management-ui.md  agent-provider-progressive-loading.md  agent-run-cancel-eof.md  agent-run-error-feedback.md  agent-session-defaults-and-model-preferences.md  agent-settings-no-console.md  app-update-reminder.md  automation-center.md  automation-custom-retry-validation.md  automation-custom-schedule.md  automation-list-polish.md  browser-workbench.md  (+122 more)
docs/: agpl-claudinal-compliance-remediation.md  code-review-2025-05-25.md  feature-audit-2025-05-25.md  git-history-graph-issue.md  third-party-open-source-compliance-remediation.md
openspec/: README.md  chat-input-content-blocks-and-attachments.md  conversation-runtime-upgrade.md  git-conflict-resolution-idea-style.md  git-workbench-conflict-resolution.md  multi-agent-runtime-platform.md
scripts/: build-platform.mjs  build-platform.test.mjs  build-server.mjs  build-server.test.mjs  check-workbench-local-icons-source.mjs  desktop-dev-runtime.mjs  desktop-dev-runtime.test.mjs  desktop-dev.mjs  dev-ports.mjs  dev-ports.test.mjs  dev-session.mjs  dev-session.test.mjs  dev.mjs  doctor.mjs  doctor.test.mjs  generate-latest-json.mjs  generate-latest-json.test.mjs  release-assets.mjs  release-assets.test.mjs  release-workflow.test.mjs  runtime-flavor.mjs  runtime-flavor.test.mjs  slash-commands-spike.mjs  trellis.mjs  trellis.test.mjs
server/: index.ts
src/: App.tsx  constants.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: acp.rs  agent_channels.rs  agent_run.rs  agent_runtime.rs  automation.rs  backend.rs  codex_app_server.rs  lib.rs  main.rs  provider_import.rs
src-tauri/src/ordinary_chat/: knowledge.rs  mcp.rs  mod.rs  provider.rs  runtime.rs  secrets.rs  skills.rs  storage.rs  types.rs
src-tauri/tests/fixtures/: mock-ai-http-server.mjs  mock-mcp-server.mjs
tests/: agent-slash-capabilities.test.ts  claude-code-interactive.test.ts  claude-context-ui.test.ts  claude-run-session.test.ts  claude-slash-system-commands.test.ts  claude_stdin_smoke.py  composer-attachments.test.ts  composer-context-usage.test.ts  conversation-preview-shortcuts.test.ts  git-diff.test.ts  plugins-settings.test.ts  shortcuts.test.ts  slash-command-editor.test.ts  slash-command-submit.test.ts  slash-commands-spike.test.ts  system-command-items.test.ts  useAppSettings.test.ts  useSlashCommands.test.ts  workbench-files.test.ts  workbench-preview-controller.test.ts
(+518 files in other folders)
