[package]
name = "codem"
version = "0.1.5"
description = "CodeM desktop shell"
authors = ["MNL"]
edition = "2021"
default-run = "codem"

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-process = "2"
portable-pty = "0.8"
rfd = "0.15"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
windows-version = "0.1"
tauri-winrt-notification = "0.7.2"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
