[package]
name = "codem"
version = "0.1.15"
description = "CodeM desktop shell"
authors = ["MNL"]
license = "MIT"
edition = "2021"
default-run = "codem"

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-stream = "0.3"
axum = "0.8"
base64 = "0.22"
aes-gcm = "0.10"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = "0.13.4"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-process = "2"
portable-pty = "0.8"
rfd = "0.15"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
toml_edit = "0.22"
toml = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
url = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_Storage_FileSystem", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
windows-version = "0.1"
tauri-winrt-notification = "0.7.2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api", "unstable"] }
window-vibrancy = "0.6"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
